--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="container-fluid text-center bg2">
     <h3><u>About Me:</u></h3>
-    <p>I'm pushpalatha vyshnavi.vedantham, pursuing B.Tech in a stream of computer science and engineering at Sri Sarathi institute of engineering and technology. <br>and I'm from Nuzvid , krishna district. I'm good at c language and python intrested in software sector . I'm fascinated in playing Badminton and my happiness is in Photography & I love Music.
+    <p>I'm pushpalatha vyshnavi.vedantham, pursuing B.Tech in a stream of computer science and engineering at Sri Sarathi institute of engineering and technology. <br>and I'm from Nuzvid , krishna district. I'm good at c language and python intrested in software sector . I'm fascinated in playing Badminton and my happiness is in Photography & <br>I love Music.
      </p>
     <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg">Read More...</a>
   </div>
