--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 <footer class="container-fluid text-center bg-4">
-  <p>This Webiste idea  is  given  By <a href="https://github.com/rajucloudmaster">my intern cloud sir.</a></p>
+  <p>This Webiste idea  is  given  by <a href="https://github.com/rajucloudmaster">my intern cloud sir.</a></p>
 </footer>
 
 
