--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container-fluid text-center bg1">
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
-    <img src="IMG-20200609-WA0018.jpg"  alt="" class="img rounded-circle"height="360px">
+    <img src="IMG-20200609-WA0018.jpg"  alt="" class="rounded-circle"height="360px">
         <h3>CSE STUDENT</h3>luid
   </div>
 
