--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container-fluid text-center bg1">
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
-    <img src="IMG-20200609-WA0018.jpg"  alt="" class="rounded-circle"height="360px"class="img img-fluid" >
+    <img src="IMG-20200609-WA0018.jpg"  alt="" class="rounded-circle"height="360px"class="img-fluid" >
         <h3>CSE STUDENT</h3>
   </div>
 
@@ -28,19 +28,19 @@
   <h3><u>My photography</u></h3>
   <div class="row">
     <div class="col-sm-4">
-        <img src="p.img-2.jpeg" class="img img-fluid" alt="" style="width:358px">
+        <img src="p.img-2.jpeg" class="img-fluid" alt="" style="width:358px">
         <h3>rose@2019</h3>
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg"class="img img-fluid"  alt=""style="width:405px">
+      <img src="p.img-3.jpeg"class="img-fluid"  alt=""style="width:405px">
       <h3>rose@2020</h3>
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-1.jpeg"class="img img-fluid" alt="" style="width:650px">
+      <img src="p.img-1.jpeg"class="img-fluid" alt="" style="width:650px">
       <h3>rose@2021</h3>
 
     </div>
