--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" class="img-fluid" alt=""style="width:405px">
+      <img src="p.img-3.jpeg" class="img-fluid" alt=""style="width:450x">
       <h3>rose@2020</h3>
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-1.jpeg" class="img-fluid"alt="" style="width:600px">
+      <img src="p.img-1.jpeg" class="img-fluid"alt="" style="width:650px">
       <h3>rose@2021</h3>
 
     </div>
