--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" class="img-fluid" alt=""style="width:395x">
+      <img src="p.img-3.jpeg" class="img-fluid" alt=""style="width:395px">
       <h3>rose@2020</h3>
 
     </div>
