--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container-fluid text-center bg1">
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
     <br>
-    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" class="img-fluid" height="360px" >
+    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt=""style="max-width:100%;height:auto;" height="360px" >
         <h3>CSE STUDENT</h3>
   </div>
 
