--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid text-center bg1">
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
     <br>
-    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:100%;height:auto;" height="360px" >
+    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:40%;height:auto;" height="360px" >
         <h3>CSE STUDENT</h3>
   </div>
 
@@ -29,19 +29,19 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-        <img src="p.img-2.jpeg" class="img-fluid" alt="" style="width:358px">
+        <img src="p.img-2.jpeg" alt="" style="max-width:60%;height:auto;">
         <h3>rose@2019</h3>
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" class="img-fluid" alt=""style="width:410px">
+      <img src="p.img-3.jpeg" alt=""style="max-width:60%;height:auto;">
       <h3>rose@2020</h3>
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-1.jpeg" class="img-fluid"alt="" style="width:650px">
+      <img src="p.img-1.jpeg" alt="" style="max-width:60%;height:auto;">
       <h3>rose@2021</h3>
 
     </div>
