--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:40%;height:auto;" height="360px" >
-         <br> <h3>CSE STUDENT</h3>
+         <br>
+    <h3>CSE STUDENT</h3>
   </div>
 
   <div class="container-fluid text-center bg2">
@@ -35,13 +36,13 @@
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" alt=""style="max-width:60%;height:auto;">
+      <img src="p.img-3.jpeg" alt=""style="max-width:80%;height:auto;">
      
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-1.jpeg" alt="" style="max-width:60%;height:auto;">
+      <img src="p.img-1.jpeg" alt="" style="max-width:90%;height:auto;">
       
 
     </div>
