--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:40%;height:auto;" height="360px" >
-         <br>
+         <br> <br>
     <h3>CSE STUDENT</h3>
   </div>
 
@@ -36,13 +36,13 @@
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" alt=""style="max-width:75%;height:auto;">
+      <img src="p.img-3.jpeg" alt=""style="max-width:75%;height:70%;">
      
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-1.jpeg" alt="" style="max-width:90%;height:auto;">
+      <img src="p.img-1.jpeg" alt="" style="max-width:78%;height:auto;">
       
 
     </div>
