--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-        <img src="p.img-2.jpeg" alt="" style="max-width:60%;height:auto;">
+        <img src="p.img-2.jpeg" alt="" style="max-width:65%;height:60%;">
         
 
     </div>
