--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-        <img src="p.img-2.jpeg" alt="" style="max-width:65%;height:auto;">
+        <img src="p.img-2.jpeg" alt="" style="max-width:65%;height:60%;">
         
 
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" alt=""style="max-width:75%;height:auto;">
+      <img src="p.img-3.jpeg" alt=""style="max-width:75%;height:50%;">
      
 
     </div>
