--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid text-center bg1">
         <h3><u>I'm pushpalatha vyshnavi</u></h3>
     <br>
-    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:40%;height:auto;" height="360px" >
+    <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:40%;height:auto;" >
          <br> <br>
     <h3>CSE STUDENT</h3>
   </div>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="col-sm-4">
-      <img src="p.img-3.jpeg" alt=""style="max-width:7auto;height:auto;">
+      <img src="p.img-3.jpeg" alt=""style="max-width:auto;height:auto;">
      
 
     </div>
