--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </div>
 
   <div class="container-fluid text-center bg2">
-    <h3><u>About Me:</u></h3>
-    <p>I'm pushpalatha vyshnavi.vedantham, pursuing B.Tech in a stream of computer science and engineering at Sri Sarathi institute of engineering and technology. <br>and I'm from Nuzvid , krishna district. I'm good at c language and python intrested in software sector . I'm fascinated in playing Badminton and my happiness is in Photography & I love Music.
+    <h3><u>About Me</u></h3>
+    <p>I'm pushpalatha vyshnavi.vedantham, pursuing B.Tech in a stream of Computer Science and Engineering at Sri Sarathi Institute of Engineering and Technology. <br>and I'm from Nuzvid , krishna district. I'm good at C language and Python and intrested in software sector . I'm fascinated in playing Badminton and my happiness is in Photography & I love Music.
     </p>
     <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg"style="max-width:100%;">Read More...</a>
   </div>
@@ -51,7 +51,7 @@
 
 
 <footer class="container-fluid text-center bg-4">
-  <p>This Webiste idea  is  given  by <a href="https://github.com/rajucloudmaster">my intern cloud sir.</a></p>
+  <p>This Webiste designed by me and idea  is  given  by <a href="https://github.com/rajucloudmaster">my intern cloud sir @raju.</a></p>
 </footer>
 
 
