--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="container-fluid text-center bg2">
     <h3><u>About Me</u></h3>
-    <p>I'm pushpalatha vyshnavi vedantham, pursuing B.Tech in a stream of Computer Science and Engineering at Sri Sarathi Institute of Engineering and Technology. <br>and I'm from Nuzvid , krishna district. I'm good at C language and Python and intrested in software sector . I'm fascinated in playing Badminton and my happiness is in Photography & I love Music.
+    <p>I'm pushpalatha vyshnavi vedantham, pursued B.Tech in a stream of Computer Science and Engineering at Sri Sarathi Institute of Engineering and Technology. <br>and I'm from Nuzvid , Andhra Pradesh. I'm good at HTML5, CSS3, JavaScript and intrested in software developing sector . I'm fascinated in playing Badminton, carrom and my happiness is in Photography &  Cooking gives me relief also I love Music the most.
     </p>
     <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg"style="max-width:100%;">Read More...</a>
   </div>
