--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 <footer class="container-fluid text-center bg-4">
-  <p>This Webiste designed by me and idea  is  given  by <a href="https://github.com/rajucloudmaster">my intern cloud sir @raju.</a></p>
+  <p>This Webiste design credits to me and guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
 </footer>
 
 
