--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
 
 <footer class="container-fluid text-center bg-4">
-  <p>This Webiste design credits to me and guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
+  <p>This Webiste design credits to me under guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
+  <center> Thank You</center>
 </footer>
 
 
