--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="container-fluid text-center bg1">
-        <h3><u>I'm pushpalatha vyshnavi</u></h3>
+        <h2>I'm pushpalatha vyshnavi</h2>
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:50%;height:auto;" >
          <br> <br>
