--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
   <div class="container-fluid text-center bg1">
-        <h2>I'm pushpalatha vyshnavi</h2>
+        <h2>!! welcome... !!</h2>
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:50%;height:auto;" >
          <br> <br>
-    <h3>CSE STUDENT</h3>
+    <h3>Pushpalatha Vyshnavi</h3>
   </div>
 
   <div class="container-fluid text-center bg2">
