--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="container-fluid text-center bg1">
-        <h2>-------HI... welcome to mypage ----------</h2>
+        <h2> HI... welcome to mypage....!!!</h2>
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:50%;height:auto;" >
          <br> <br>
@@ -52,7 +52,7 @@
 
 
 <footer class="container-fluid text-center bg-4">
-  <p>This Webiste design credits to me under guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
+  <p>This Webiste design credits goes to me its done under guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
   <center> Thank You</center>
 </footer>
 
