--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:50%;height:auto;" >
          <br> <br>
-    <h3> I'm Pushpalatha Vyshnavi</h3>
+    <h3> I'm Pushpalatha Vyshnavi</h3>, <h4>  a "Web developer" </h4>
   </div>
 
   <div class="container-fluid text-center bg2">
