--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
 <div class="container-fluid text-center bg-3">
-  <h3><u>My photography</u></h3>
+  <h3>My Photography </h3>
   <br>
   <div class="row">
     <div class="col-sm-4">
