--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       
 
     </div>
-  </div>
+  </div> <hr>
 </div>
-<hr>
+
 
 <footer class="container-fluid text-center bg-4">
   <p>This Webiste design credits goes to me its done under guidence of <a href="https://github.com/rajucloudmaster">my intern mentor @raju.</a></p>
