--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p>I'm pushpalatha vyshnavi vedantham, pursued B.Tech in a stream of Computer Science and Engineering at Sri Sarathi Institute of Engineering and Technology. <br>
       and I'm from Nuzvid , Andhra Pradesh. I'm good at HTML5, CSS3, JavaScript and intrested in software developing sectors . I'm fascinated in playing Badminton, carrom and my happiness is in Photography &  Cooking gives me relief also I love Music the most.
     </p>
+     <a href="https://pushpalathavyshnavi-v.github.io/modal-window/" class="btn btn-danger btn-lg"style="max-width:100%;">Linkedin profile...</a>
     <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg"style="max-width:100%;">Linkedin profile...</a>
   </div>
 
