--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       and I'm from Nuzvid , Andhra Pradesh. I'm good at HTML5, CSS3, JavaScript and intrested in software developing sectors . I'm fascinated in playing Badminton, carrom and my happiness is in Photography &  Cooking gives me relief also I love Music the most.
     </p>
      <a href="https://pushpalathavyshnavi-v.github.io/modal-window/" class="btn btn-danger btn-lg"style="max-width:100%;">Linkedin profile...</a>
-    <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg"style="max-width:100%;">Linkedin profile...</a>
+     &nbps;&nbps;&nbps;  <a href="https://www.linkedin.com/in/pushpalatha-vyshnavi-vedantham-748639222" class="btn btn-danger btn-lg"style="max-width:100%;">Linkedin profile...</a>
   </div>
 
 <div class="container-fluid text-center bg-3">
