--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <img src="IMG-20200609-WA0018.jpg"  class="rounded-circle" alt="" style="max-width:50%;height:auto;" >
          <br> <br>
-    <h3> I'm Pushpalatha Vyshnavi, <h4>  "Web Developer" </h4></h3>
+    <h3>  Pushpalatha Vyshnavi vedantham , <h4>  "A Web Developer" </h4></h3>
   </div>
 
   <div class="container-fluid text-center bg2">
